@@ -36,6 +36,19 @@ AC_DEFUN([lldp_AC_EXPAND], [
   exec_prefix=$exec_prefix_save
 ])
 
+dnl lldp_ARG_WITH_UNQUOTED(name, help1, default)
+
+AC_DEFUN([lldp_ARG_WITH_UNQUOTED],[
+  AC_ARG_WITH([$1],
+	AS_HELP_STRING([--with-$1],
+		[$2 @<:@default=$3@:>@]),[
+        AC_DEFINE_UNQUOTED(AS_TR_CPP([$1]), [$withval], [$2])
+        AC_SUBST(AS_TR_CPP([$1]), [$withval])],[
+	AC_DEFINE_UNQUOTED(AS_TR_CPP([$1]), [$3], [$2])
+        AC_SUBST(AS_TR_CPP([$1]), [$3])
+        eval with_[]m4_translit([$1], [-+.], [___])=$3
+])])
+
 dnl lldp_ARG_WITH(name, help1, default)
 
 AC_DEFUN([lldp_ARG_WITH],[
